# lib-version

./: .gitignore  README.md  pyproject.toml  version.txt
.github/workflows/: release.yml
lib_version/: version_util.py
tests/: test_version_util.py
