[tool.poetry]
name = "lib-version"
version = "0.0.0"  # Hopefully gets overridden
description = "Library to expose version metadata"
authors = ["Ayush"]
readme = "README.md"
packages = [{ include = "lib_version" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
